# cursive-logger-view

./: .gitignore  Cargo.toml  README.md  Readme.md
.cargo/: config.toml
examples/: no_indent.rs  simple.rs
src/: formatter.rs  lib.rs  log_buffer.rs  toggle.rs  view.rs
